# PTaV

./: .gitignore
lab1-2/task1/: CMakeLists.txt  main.cpp  task1.h  test.cpp
lab1-2/task2/: CMakeLists.txt  Human.h  main.cpp  test.cpp
lab1-2/task3/: CMakeLists.txt  main.cpp  test.cpp
lab1-2/task4/: CMakeLists.txt  main.cpp  test.cpp
lab1-2/task5/: CMakeLists.txt  main.cpp  test.cpp
lab1-2/task6/: CMakeLists.txt  main.cpp
lab1-2/task6/src/: main.cpp  test.cpp
lab1-2/task6/src/SimpleFileDownloader/: SimpleFileDownloader.cpp  SimpleFileDownloader.h
lab1/task2/: main.cpp
lab1/task3/: main.cpp
lab1/task5/: CMakeLists.txt  main.cpp
lab1/task6/: CMakeLists.txt  main.cpp
lab3/: CMakeLists.txt
lab3/src/: main.cpp  tests.cpp
lab3/src/RectangleChecker/: RectangleChecker.cpp  RectangleChecker.h
